# rag-god-mode

./: .env.example  .gitignore  RATE_LIMIT_GUIDE.md  README.md  app.py  kibela.py  main.py  pyproject.toml  rag_chain.py  redmine.py  redmine_getter.py  relation_ingest.py  test_langsmith.py  utils.py
chat/: utils.py
prompts/: prompt.yaml
templates/: chat.html  chat_response.html
